--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ravi+Prakash&display=swap");
+
+:root {
+  --colorYellow: #d2da4b;
+  --colorfond: #121830;
+  --colorNav: #1c1b43;
+  --fontText: "Indie Flower", cursive;
+  --fontTitle: "Ravi Prakash", cursive;
+}
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /*mantener el  footer abajo*/
@@ -11,7 +20,7 @@ body {
 
 body {
   margin: 0;
-  background-color: #121830;
+  background-color: var(--colorfond);
   display: flex;
   flex-direction: column;
 }
@@ -22,11 +31,12 @@ main {
 
 footer {
   text-align: center;
-  color: #d2da4b;
+  color: var(--colorYellow);
   font-size: 1.5em;
   font-family: "Indie Flower", cursive;
   flex-shrink: 0;
 }
+
 .hidden-section {
   display: none;
 }
@@ -40,7 +50,7 @@ nav {
   justify-content: space-between;
   padding: 0 1rem;
   position: relative;
-  background-color: #1c1b43;
+  background-color: var(--colorNav);
 }
 
 .list-menu {
@@ -49,28 +59,33 @@ nav {
   padding-left: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
   position: absolute;
   top: 100%;
   left: 0;
   width: 100%;
   text-align: center;
-  background-color: #1c1b43;
+  background-color: var(--colorNav);
   color: #f3e4e4;
-  font-family: "Indie Flower", cursive;
+  font-family: var(--fontText);
   cursor: pointer;
   transform: translateX(-100%);
   transition: transform 0.4s ease-out;
+  height: 100vh;
 }
 
 #menu-icon {
-  background-color: #1c1b43;
+  background-color: var(--colorNav);
   color: white;
   cursor: pointer;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .menuItem {
-  font-size: 2rem;
+  font-size: 1.5rem;
+  border-bottom: solid white 1px;
+  width: 90%;
+  margin-bottom: 10px;
 }
 
 .menuItem:hover {
@@ -91,6 +106,7 @@ nav {
   margin-top: 1rem;
   width: 100%;
 }
+
 .filter-character {
   display: flex;
   align-items: center;
@@ -99,10 +115,11 @@ nav {
   color: #f3e4e4;
   cursor: pointer;
   text-align: center;
-  font-family: "Ravi Prakash", cursive;
+  font-family: var(--fontTitle);
   font-size: 1.5rem;
   width: 80%;
-  margin-bottom: 1rem
+  margin: 0 10px 10px 10px;
+  padding: 0;
 }
 
 .filter-list {
@@ -112,20 +129,21 @@ nav {
   flex-wrap: wrap;
   list-style-type: none;
   border-bottom: solid 1px white;
+  margin-bottom: 10px;
 }
 
 .btn-filter {
   border: solid 1px white;
   border-radius: 4px;
-  padding: 0 0.5rem;
   margin: 0 0.3rem 0.5rem 0;
   cursor: pointer;
   font-family: "Indie Flower", cursive;
   color: #d2da4b;
   font-size: 1.4rem;
+  padding: 0 3px;
 }
 
-.btn-filter:hover{
+.btn-filter:hover {
   box-shadow: inset 0 0 8px #d2da4b;
 }
 
@@ -133,12 +151,6 @@ nav {
   background-color: #d2da4b;
   color: #333;
   border: solid #333 1px;
-}
-
-.btn-filter.inactive {
-  background-color: gray;
-  opacity: 0.4;
-  color: white;
 }
 
 .category {
@@ -149,6 +161,7 @@ nav {
 .name-card {
   font-size: 1.5rem;
   text-align: center;
+  margin: 0;
 }
 
 .image-card {
@@ -179,9 +192,10 @@ nav {
   opacity: 0;
   order: 1;
 }
+
 /*paginacion*/
 .pagenumbers {
-  width: 80%;
+  width: 95%;
   margin: 4rem auto;
   display: flex;
   flex-wrap: wrap;
@@ -195,6 +209,8 @@ nav {
   width: 3rem;
   height: 2.5rem;
   margin: 0 0.4rem 0.5rem 0;
+  border: none;
+  border-radius: 12%;
 }
 
 .pagenumbers button.active {
@@ -224,7 +240,7 @@ nav {
   font-family: "Indie Flower", cursive;
   text-align: center;
   margin: 1rem 0;
-  
+
 }
 
 .container-sort {
@@ -232,6 +248,7 @@ nav {
   width: 100%;
   justify-content: space-around;
 }
+
 .btn-delete {
   /*boton personajes*/
   height: 2.7rem;
@@ -247,7 +264,7 @@ nav {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.btn-delete:hover{
+.btn-delete:hover {
   filter: drop-shadow(0px 0px 0px #16acc9)
 }
 
@@ -263,9 +280,36 @@ nav {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.filter-btn:hover{
+.filter-btn:hover {
   filter: drop-shadow(0px 0px 0px cornsilk)
 }
+
+/*sction home*/
+.container-home {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container-home h1 {
+  color: var(--colorYellow);
+  font-family: var(--fontTitle);
+  margin: 0;
+  font-size: 2rem;
+}
+
+.container-home p {
+  color: white;
+  font-family: var(--fontText);
+  font-size: 1.5rem;
+}
+
+.container-home img {
+  width: 80%;
+  max-width: 450px;
+}
+
 /*modal*/
 .modal-container {
   background-color: rgba(0, 0, 0, 0.3);
@@ -276,7 +320,7 @@ nav {
   left: 0;
   height: 100vh;
   width: 100vw;
-  padding: 1rem;
+  padding: 0;
   transition: opacity 0.3s ease;
   overflow-y: auto;
 }
@@ -290,7 +334,7 @@ nav {
   position: relative;
   background-color: #d2da4b;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 0;
   box-shadow: 0 2px 4px rgb(0 0 0 / 20%);
   padding: 1.5rem 0 1.5rem 2rem;
 }
@@ -299,9 +343,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #16acc9;
   border-radius: 10px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   width: 90%;
 }
 
@@ -311,6 +353,9 @@ nav {
   right: 0;
   font-size: 1.5rem;
   width: 8%;
+  border: none;
+  background: transparent;
+  font-family: var(--fontText);
 }
 
 .character-list {
@@ -318,74 +363,33 @@ nav {
   font-family: "Indie Flower", cursive;
   font-size: 1rem;
   width: 100%;
+  max-width: 300px;
   padding: 1.3rem;
 }
 
 .character-img {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   width: 100%;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  max-width: 350px;
+  border-radius: 10px;
+}
+
+.img-constrction {
+  max-width: 600px;
+  width: 60%;
+  margin: auto;
+}
+
+.text-constrction {
+  font-family: var(--fontTitle);
+  color: var(--colorYellow);
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 /*responsive*/
-@media screen and (min-width: 640px) {
-  .wrapper {
-    grid-template-columns: repeat(3, 1fr);
-  }
+@media screen and (min-width: 800px) {
 
-  /*modal*/
-  .modal-container {
-    padding: 0;
-  }
-  .modal-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .modal {
-    width: 89%;
-    height: 86%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-  }
-
-  .containerCharacter {
-    flex-direction: row;
-    border-radius: 10px;
-    height: 88%;
-    width: 89%;
-  }
-
-  .character-img {
-    height: 100%;
-    border-bottom-left-radius: 10px;
-    border-top-right-radius: 0;
-  }
-
-  .botonModal {
-    width: 6%;
-  }
-
-  .container-bar-sort {
-    flex-direction: row;
-    /* margin: 1rem; */
-  }
-  .container-bar {
-    width: 50%;
-  }
-
-  .container-sort {
-    width: 50%;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@media screen and (min-width: 1280px) {
   /*barra de navegacion*/
   .containder-bar {
     justify-content: flex-end;
@@ -409,11 +413,13 @@ nav {
     flex-direction: row;
     top: 0;
     justify-content: space-around;
+    height: auto;
   }
 
   .menuItem {
     margin: 0 1rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    border-bottom: none;
   }
 
   .menuItem:hover {
@@ -435,22 +441,18 @@ nav {
   }
 
   .modal {
-    width: 50%;
+    width: 70%;
+    max-width: 650px;
     height: 64%;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 10px;
   }
 
   .containerCharacter {
     flex-direction: row;
     border-radius: 10px;
-  }
-
-  .character-img {
-    height: 100%;
-    border-bottom-left-radius: 10px;
-    border-top-right-radius: 0;
   }
 
   .character-list {
@@ -460,13 +462,13 @@ nav {
   .container-bar-sort {
     flex-direction: row;
     align-items: center;
-    margin: 1rem 5rem; 
   }
 
   .container-bar {
     width: 50%;
     justify-content: flex-end;
   }
+
   .container-sort {
     width: 40%;
     align-items: center;
@@ -478,7 +480,7 @@ nav {
     height: auto;
     padding: 0.2rem;
   }
- 
+
   .category {
     width: 80%;
     margin-bottom: 1rem;
@@ -488,7 +490,8 @@ nav {
 
   .filter-character {
     flex-direction: column;
-    width: 15%;
+    width: 22%;
+    max-width: 170px;
   }
 
   .container-filter-wrapper {
@@ -504,7 +507,6 @@ nav {
   }
 
   .wrapper {
-    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: min-content;
     width: 70%;
   }
